--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -2,7 +2,8 @@ version: '3'
 services:
   backend:
     build:
-      context: ./backend
+      context: ./
+      dockerfile: ./Dockerfile
     ports:
       - '3002:3002'
     depends_on:
