--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -5,10 +5,10 @@ WORKDIR /usr/app
 COPY package*.json ./
 
 
-RUN yarn
+RUN npm install
 
 COPY . .
 
 EXPOSE 3002
 
-CMD yarn start
+CMD npm run start
