--- a/backend/package.json
+++ b/backend/package.json
@@ -6,12 +6,10 @@
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
-    "prebuild": "rimraf dist",
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "start": "nest start --watch",
+    "start": "nest start",
     "start:dev": "nest start --watch",
-    "start:test": "NODE_ENV=test nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
@@ -22,65 +20,70 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@nestjs-modules/mailer": "^1.8.1",
-    "@nestjs/axios": "^0.1.0",
-    "@nestjs/common": "^8.0.0",
-    "@nestjs/config": "^2.2.0",
-    "@nestjs/core": "^8.0.0",
-    "@nestjs/jwt": "^9.0.0",
+    "@aws-sdk/client-cognito-identity-provider": "^3.433.0",
+    "@nestjs/common": "^9.0.0",
+    "@nestjs/config": "^2.3.1",
+    "@nestjs/core": "^9.0.0",
+    "@nestjs/jwt": "^10.0.3",
+    "@nestjs/mapped-types": "*",
     "@nestjs/passport": "^9.0.3",
-    "@nestjs/platform-express": "^8.0.0",
+    "@nestjs/platform-express": "^9.0.0",
     "@nestjs/platform-socket.io": "^9.2.1",
-    "@nestjs/swagger": "^5.2.1",
-    "@nestjs/typeorm": "^9.0.1",
+    "@nestjs/schedule": "^3.0.2",
+    "@nestjs/swagger": "^6.3.0",
+    "@nestjs/typeorm": "^10.0.0",
     "@nestjs/websockets": "^9.2.1",
-    "@types/passport": "^1.0.12",
-    "@types/passport-http": "^0.3.9",
     "@types/socket.io": "^3.0.2",
-    "axios": "^1.1.0",
-    "bcrypt": "^5.0.1",
-    "cache-manager": "^4",
-    "cache-manager-redis-store": "^2.0.0",
+    "amazon-cognito-identity-js": "^6.3.6",
+    "aws-sdk": "^2.1479.0",
+    "axios": "^1.4.0",
+    "bcrypt": "^5.1.0",
     "class-transformer": "^0.5.1",
-    "class-validator": "^0.13.2",
-    "mssql": "^7.3.5",
-    "nestjs-typeorm-paginate": "^4.0.2",
+    "class-validator": "^0.14.0",
+    "ioredis": "^5.3.2",
+    "ldapjs": "^3.0.6",
+    "modbus-serial": "^8.0.11",
+    "moment-timezone": "^0.5.43",
+    "mssql": "^9.1.1",
+    "nest-winston": "^1.9.4",
+    "nestjs-minio-client": "^2.0.0",
+    "nestjs-typeorm-paginate": "^4.0.3",
     "passport": "^0.6.0",
     "passport-http": "^0.3.0",
-    "passport-jwt": "^4.0.0",
+    "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
-    "pg": "^8.11.3",
-    "redis": "^4.5.1",
+    "pdf-lib": "^1.17.1",
+    "pdf-parse": "^1.1.1",
+    "pdfkit": "^0.13.0",
     "reflect-metadata": "^0.1.13",
-    "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
-    "swagger-ui-express": "^4.5.0",
-    "typeorm": "^0.3.10"
+    "socket.io": "^2.4.0",
+    "typeorm": "^0.3.16",
+    "winston": "^3.11.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
-    "@nestjs/cli": "^8.0.0",
-    "@nestjs/schematics": "^8.0.0",
-    "@nestjs/testing": "^8.0.0",
-    "@types/cache-manager": "^4.0.2",
+    "@nestjs/cli": "^9.0.0",
+    "@nestjs/schematics": "^9.0.0",
+    "@nestjs/testing": "^9.0.0",
     "@types/express": "^4.17.13",
-    "@types/jest": "27.5.0",
-    "@types/multer": "^1.4.7",
-    "@types/node": "^16.0.0",
+    "@types/jest": "29.5.0",
+    "@types/node": "18.15.11",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
     "eslint": "^8.0.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
-    "jest": "28.0.3",
+    "jest": "^29.5.0",
     "prettier": "^2.3.2",
     "source-map-support": "^0.5.20",
     "supertest": "^6.1.3",
-    "ts-jest": "28.0.1",
+    "ts-jest": "29.0.5",
     "ts-loader": "^9.2.3",
     "ts-node": "^10.0.0",
-    "tsconfig-paths": "4.0.0",
-    "typescript": "^4.3.5"
+    "tsconfig-paths": "4.2.0",
+    "typescript": "^4.7.4"
   },
   "jest": {
     "moduleFileExtensions": [
