--- a/backend/environments/.env
+++ b/backend/environments/.env
@@ -8,7 +8,7 @@ SWAGGER_VERSION=1.0
 SWAGGER_API_URL=http://localhost:3002
 
 DB_TYPE=postgres
-DB_HOST=database
+DB_HOST=localhost
 DB_PORT=5432
 DB_USERNAME=postgres
 DB_PASSWORD=3663
